Pro 1.0.10
==========

Fixes:
 - Fixed ConcurrentModificationException in BeanModelTable.clear (MODELER-467)

New features:
 - Add regex and pollingInterval attributes to TCP/IP protocol (MODELER-448)
 - Sensors can be removed from Labels and Images, Commands from Buttons,
   SwitchCommands from Switches and SliderCommands from Sliders (MODELER-404)

Pro 1.0.9
=========

Fixes:
 - Ensure that Restlet ClientResource is not released too soon (MODELER-444)

New features:
 - EnOcean configuration (Rainer Hitz) (MODELER-479)
 - Have default values for EnOcean comm layer and port properties (MODELER-475)
 - Have a download window with link to download controller and eBox image (MODELER-482)

Pro 1.0.8
=========

Fixes:
 - MODELER-460: In Controller Management window, remove id column
 - MODELER-474: Have default values for Z-wave comm layer and port properties
 - MODELER-453: An error 500 occurs when trying to set a previously defined controller property to <empty>

New features:
 - Support new features in Marantz AVR protocol (MODELER-461)
 - Add protocol definition for MicasaVerde Vera protocol and add controller property (MODELER-456)
 - Extend the wizard for discovered devices to be able to handle "vera" devices (MODELER-457)

Pro 1.0.7
=========

Fixes:
 - MODELER-454: Impossible to download Pro controller from Pro Designer
 - MODELER-455: Incorrectly referenced css

New features:
 - Add support for Marantz Receivers protocol (MODELER-442)

Pro 1.0.6
=========

Fixes:
 - MODELER-446: Default webapp port for controller should be changed to 8688

New features:
 - In edit/new macro window, command tree must include device name (MODELER-361)

Pro 1.0.5
=========

Fixes:
 - MODELER-409: NPE on autosave from UI design
 - MODELER-418: Hibernate 'lazy initialization' exception on save (2)

New features:
 - contentType attribute on HTTP protocol (MODELER-416)
 - Have protocol names ordered alphabetically for commands (MODELER-417)